@@ -44,7 +44,7 @@ These are basic text menus. The layout is generated automatically and users are 
 required to provide the menu items.
 
 .. qtile_class:: qtile_extras.popup.menu.PopupMenu
-    :methods: generate,from_dbus_menu
+    :methods: generate,from_dbus_menu,make_generators
 
 .. qtile_class:: qtile_extras.popup.menu.PopupMenuItem
 
